# tetris

./: .gitignore  LICENCE.md  README.md  VERSION  VERSIONS  VERSIONS.md  board.py  casioPlotTetris.py  casioplotTetris.py  casioplotVTetris.py  cmdLineParser.py  cmdParser.py  colorizer.py  consoleTetris.py  consts.py  cursesTetris.py  display.py  eventHandler.py  jtetris.py  piece.py  pygameTetris.py  scores.high  scores.py  shapes.py  sharedConsts.py  tetris.py  tetrisGame.py  version.txt
casio/: casioplotTetris.py
cpp/: board.cpp  board.h  casioFX-CG50.h  casioScreen.h  consts.h  jTetris.cpp  piece.cpp  piece.h  splashScreen.h  templates.h  tetrisGame.cpp  tetrisGame.h
cpp/FXCG50/: CMakeLists.txt
cpp/FXCG50/assets-cg/: fxconv-metadata.txt
cpp/FXCG50/src/: casioFX-CG50.cpp  casioFX-CG50.h  consts.h  jTetris.cpp  piece.cpp  piece.h  rotate.py  tab.h  tabs.cpp  tabs.h  templates.h  test.cpp  tetrisGame.cpp  tetrisGame.h  tetrisTab.cpp  tetrisTab.h  tetrisTabs.h
cpp/casio_tetris/: CMakeLists.txt
cpp/casio_tetris/src/: casioFX-CG50.cpp  casioFX-CG50.h  consts.h  jTetris.cpp  piece.cpp  piece.h  splashScreen.h  templates.h  tetrisGame.cpp  tetrisGame.h
cpp/essai/: essai.cpp  essai.sln  essai.vcxproj  essai.vcxproj.filters
cpp/linux/: jtetris.cpp  linux.cbp  linux.depend  linux.layout  tests.cpp
sharedTools/: cmdLineParser.py  colorizer.py  systemInfos.py
